pwd in workflow

--- a/.github/workflows/user.yml
+++ b/.github/workflows/user.yml
@@ -21,7 +21,8 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - run: cd user/
-      - run: echo $pwd
+      - run: echo $(pwd)
+      - run: pwd
       - run: npm install
       - run: npm test
       - name: Set up Docker Buildx
