--- a/.github/workflows/user.yml
+++ b/.github/workflows/user.yml
@@ -16,11 +16,14 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+      - run: ls
+      - run: pwd
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-      - run: cd hack-user/user/
+      - run: cd user/
+      - run: ls
       - run: echo $(pwd)
       - run: pwd
       - run: npm install
