--- a/.github/workflows/user.yml
+++ b/.github/workflows/user.yml
@@ -22,21 +22,21 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-      - run: cd user/
-      - run: ls
-      - run: echo $(pwd)
-      - run: pwd
       - run: npm install
+        working-directory: user
       - run: npm test
+        working-directory: user
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       - name: Login to Docker Hub
+        working-directory: user
         uses: docker/login-action@v2
         with:
           registry: team1.azurecr.io
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Build and push
+        working-directory: user
         uses: docker/build-push-action@v4
         with:
           push: true
