--- a/.github/workflows/user.yml
+++ b/.github/workflows/user.yml
@@ -28,14 +28,13 @@ jobs:
         uses: docker/setup-buildx-action@v2
       - name: Login to Docker Hub
         uses: docker/login-action@v2
-        working-directory: user
         with:
           registry: team1.azurecr.io
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Build and push
         uses: docker/build-push-action@v4
-        working-directory: user
         with:
           push: true
+          file: user/Dockerfile
           tags: team1.azurecr.io/user:latest
